# mcp-neo4j

./: .gitignore  DEVELOP.md  README.md  nx.json  package-lock.json  package.json  project.json  tsconfig.base.json
.github/workflows/: pr-mcp-common.yml  pr-mcp-neo4j-cypher.yml  publish-aura-manager.yml  publish-cypher.yml  publish-memory.yml  publish.yml
docs/: BGE_VECTOR_IMPLEMENTATION_COMPLETE.md  bge-large-vector-implementation-plan.md  bge-large-vector-plan.md  embedding-implementation-example.md  gemini-compatibility-implementation.md  model-compatibility-matrix.md
experiments/gpu-embedding-test/: README.md  embedding_gpu_test.py  local_embedding_example.py  requirements.txt  run_test.sh  simple_gpu_test.py  test_best_embeddings.py  test_bge_large_resources.py
libs/graphrag-memory/: README.md  jest.config.ts  package.json  project.json
servers/common/: CHANGELOG.md  README.md  pyproject.toml
servers/common/common/: __init__.py
servers/common/common.egg-info/: PKG-INFO  SOURCES.txt
servers/common/common/neo4j/: cypher_validation.py  healthcheck.py  read.py  write.py
servers/common/mcp_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
servers/common/tests/integration/: conftest.py
servers/common/tests/integration/neo4j/: test_read.py  test_write.py
servers/common/tests/unit/neo4j/: test_cypher_validation.py
servers/mcp-neo4j-cypher/: CHANGELOG.md  CHANGELOG.txt  README.md  format.sh  pyproject.toml  pyrightconfig.json  test.sh
servers/mcp-neo4j-cypher/src/mcp_neo4j_cypher/: CHANGELOG.txt  __init__.py  server.py
servers/mcp-neo4j-cypher/src/mcp_server_neo4j/: __init__.py  server.py
servers/mcp-neo4j-cypher/tests/: test_neo4j_cypher_integration.py
servers/mcp-neo4j-cypher/tests/integration/: conftest.py  docker-compose.yml  test_server_IT.py
servers/mcp-neo4j-memory/: README.md  TESTING_SUMMARY.md  TEST_REVIEW_PLAN.md  jest.config.ts  manual_test_results.md  project.json  pyproject.toml  schema_demo.py  simple_test.py  test.sh  test_compatibility.py  test_direct_embeddings.py
servers/mcp-neo4j-memory/src/: main.ts  neo4j-memory.ts
servers/mcp-neo4j-memory/src/mcp_neo4j_memory/: __init__.py  __main__.py  compatibility.py  config.py  server.py  vector_memory.py
servers/mcp-neo4j-memory/test/: neo4j-memory.test.ts
servers/mcp-neo4j-memory/tests/: conftest.py  test_error_handling.py  test_intelligent_merge.py  test_mcp_server_integration.py  test_merge_integration.py  test_neo4j_memory_integration.py  test_vector_memory.py
(+22 files in other folders)
