[project]
name = "common"
version = "0.1.0"
description = "Common functions for Neo4j MCP servers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "neo4j>=5.26.1",
]

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["common"]

