[project]
name = "mcp-neo4j-cypher"
version = "0.1.1"
description = "A simple Neo4j MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp>=0.9.1", "neo4j>=5.26.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389"]

[project.scripts]
mcp-neo4j-cypher = "mcp_neo4j_cypher:main"
