[project]
name = "mcp-neo4j-cypher"
version = "0.1.2"
description = "A simple Neo4j MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "neo4j>=5.26.0",
    "pydantic>=2.10.1",
    "pytest-asyncio>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "pytest>=7.0.0", "pytest-asyncio>=0.20.3"]

[project.scripts]
mcp-neo4j-cypher = "mcp_neo4j_cypher:main"
